fix overflow for menu responsive #130

--- a/drupal/sites/all/themes/antistatique/assets/sass/organisms/_navbar.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/organisms/_navbar.scss
@@ -142,7 +142,7 @@
     padding-right: 0;
 
     &.in {
-      overflow: visible;
+      overflow-y: visible;
     }
 
     > nav {
