--- a/drupal/sites/all/themes/antistatique/assets/sass/others/_helpers.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/others/_helpers.scss
@@ -2,6 +2,11 @@
  * Background and block styles
  */
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .bg {
   &-foggy {
     background: $dust;
